@@ -16,6 +16,9 @@
 	* path.py move to Extensions so that pickleshare does not need
 	IPython-specific import. Extensions added to pythonpath right
 	at __init__.
+	
+	* iplib.py: ipalias deprecated/redundant; aliases are converted and 
+	called with _ip.system and the pre-transformed command string.
 
 2006-01-29  Fernando Perez  <Fernando.Perez@colorado.edu>
 
